Fixed Wrap and Added Category, Location

--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -57,14 +57,15 @@ h1{
     font-size: 50px;
     font-family: sans-serif;
     padding-bottom: 20px;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
 }
 
 #photos-container{
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 #photos-container div{
@@ -78,4 +79,11 @@ h1{
     height:100%;
     object-fit:cover;
     border-radius: 20px;
+}
+
+#categories, #location{
+    margin-left: 50px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: lighter;
+    color: gray;
 }
